--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -36,7 +36,7 @@ tab_powerline_style angled
 tab_bar_min_tabs 1 
 tab_switch_strategy previous
 tab_title_template {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
-enabled_layouts horizontal
+enabled_layouts horizontal,tall
 # vim:ft=kitty
 
 background #080808
