--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,9 +20,9 @@ font_size 13.0
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, single, double, curly
 
-# open_url_with default
-# url_prefixes http https file ftp gemini irc gopher mailto news git
-# detect_urls yes
+open_url_with default
+url_prefixes http https file ftp gemini irc gopher mailto news git
+detect_urls yes
 
 # select_by_word_characters @-./_~?&=%+#
 
