changes before reinstall

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ bold_font        JetBrainsMonoNL NFM Bold
 italic_font      JetBrainsMonoNL NFM Italic 
 bold_italic_font JetBrainsMonoNL NFM Bold Italic
 
-font_size 13.0
+font_size 11.0
 
 # symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
@@ -23,7 +23,7 @@ font_size 13.0
 open_url_with default
 url_prefixes http https file ftp gemini irc gopher mailto news git
 detect_urls yes
-
+map ctrl+shift+enter launch --cwd=current
 # select_by_word_characters @-./_~?&=%+#
 
 #: Characters considered part of a word when double clicking. In
